--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "GPT_MODEL": "gpt-4",
+    "GPT_MODEL": "gpt-4o",
     "OPENAI_API_KEY": "sk-proj-HgYXFJi7K4b2lHJ6Unm8T3BlbkFJRdxQrzv33GyjqnTEFUEx"
 }
